# llvm-cbe-SGX

./: CMakeLists.txt  README.md
test/c_tests/statements/: test_simple_if_else.c
test/selectionsort/: main  main.cbe.c  main.ll
tools/llvm-cbe/: llvm-cbe.cpp
unittests/: CMakeLists.txt
